# vulkan_experiments

./: .gitmodules  CMakeLists.txt  CMakePresets.json  ex_01.cpp  main.cpp
assets/ex_01/shaders/: compile_shaders.sh
assets/ex_02/shaders/: compile_shaders.sh
assets/shaders/: 04_with_texture.frag  compile_shaders.sh
include/: init_core.h
src/: init_core.cpp
